Add Catch2 testing library
Wrote initial tests.
Fixed operator precedence for + - * / %, added test for it.
Changed print function to print to captured string not console.
Changed Error to return column and row number in what().
Changed PlaceInCode to store numbers as uint32_t.

--- a/src/Tests/Tests.vcxproj
+++ b/src/Tests/Tests.vcxproj
@@ -25,8 +25,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TestsGeneral.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\3rdParty\Catch2\catch.hpp" />
     <ClInclude Include="..\MinScriptLang.h" />
     <ClInclude Include="PCH.h" />
   </ItemGroup>
