--- a/src/Tests/Tests.vcxproj
+++ b/src/Tests/Tests.vcxproj
@@ -25,7 +25,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="TestsGeneral.cpp" />
+    <ClCompile Include="TestsArrays.cpp" />
+    <ClCompile Include="TestsBasic.cpp" />
+    <ClCompile Include="TestsFunctions.cpp" />
+    <ClCompile Include="TestsObjects.cpp" />
+    <ClCompile Include="TestsTypes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\3rdParty\Catch2\catch.hpp" />
