--- a/src/Tests/Tests.vcxproj
+++ b/src/Tests/Tests.vcxproj
@@ -19,6 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Modules\ModuleMath.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MinScriptLangUsage.cpp" />
     <ClCompile Include="PCH.cpp">
@@ -28,12 +32,14 @@
     <ClCompile Include="TestsArrays.cpp" />
     <ClCompile Include="TestsBasic.cpp" />
     <ClCompile Include="TestsFunctions.cpp" />
+    <ClCompile Include="TestsModuleMath.cpp" />
     <ClCompile Include="TestsObjects.cpp" />
     <ClCompile Include="TestsTypes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\3rdParty\Catch2\catch.hpp" />
     <ClInclude Include="..\MinScriptLang.h" />
+    <ClInclude Include="..\Modules\ModuleMath.hpp" />
     <ClInclude Include="PCH.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
