--- a/src/Tests/Tests.vcxproj.filters
+++ b/src/Tests/Tests.vcxproj.filters
@@ -9,6 +9,10 @@
     <ClCompile Include="TestsObjects.cpp" />
     <ClCompile Include="TestsTypes.cpp" />
     <ClCompile Include="TestsArrays.cpp" />
+    <ClCompile Include="..\Modules\ModuleMath.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="TestsModuleMath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PCH.h" />
@@ -18,6 +22,9 @@
     <ClInclude Include="..\3rdParty\Catch2\catch.hpp">
       <Filter>3rdParty</Filter>
     </ClInclude>
+    <ClInclude Include="..\Modules\ModuleMath.hpp">
+      <Filter>Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="MinScriptLang">
@@ -25,6 +32,9 @@
     </Filter>
     <Filter Include="3rdParty">
       <UniqueIdentifier>{5ac08972-6df3-45a6-bcfe-67aa9e9e9aec}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Modules">
+      <UniqueIdentifier>{99377382-428e-41b4-933a-235b1792cfaf}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
