Refactoring: Renamed all H files to HPP

--- a/src/Tests/Tests.vcxproj
+++ b/src/Tests/Tests.vcxproj
@@ -38,9 +38,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\3rdParty\Catch2\catch.hpp" />
-    <ClInclude Include="..\MinScriptLang.h" />
+    <ClInclude Include="..\MinScriptLang.hpp" />
     <ClInclude Include="..\Modules\ModuleMath.hpp" />
-    <ClInclude Include="PCH.h" />
+    <ClInclude Include="PCH.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -131,7 +131,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <TreatWarningAsError>true</TreatWarningAsError>
-      <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile>PCH.hpp</PrecompiledHeaderFile>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <DisableSpecificWarnings>4100;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
@@ -171,7 +171,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <TreatWarningAsError>true</TreatWarningAsError>
-      <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile>PCH.hpp</PrecompiledHeaderFile>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <DisableSpecificWarnings>4100;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
